Update title and provide github link

--- a/_posts/2014-08-21-Animu.md
+++ b/_posts/2014-08-21-Animu.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Anime
+title: Anime and Animu
 ---
 
-Animu is a simple project I started last year when I was fed up with how limited Windows Explorer was when it came to
+[Animu](https://github.com/hypereddie/Animu) is a simple project I started last year when I was fed up with how limited Windows Explorer was when it came to
 customization. I didn't like how folders looked and I didn't like how Windows refused to make thumbnails for my
 MKV files...so I made Animu.
 
